--- a/grpcServer/grpcServer.csproj
+++ b/grpcServer/grpcServer.csproj
@@ -12,6 +12,16 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+        <Protobuf Include="proto\todo.proto" GrpcServices="Both" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Google.Protobuf" Version="3.27.2" />
+      <PackageReference Include="Grpc.AspNetCore" Version="2.64.0" />
+      <PackageReference Include="Grpc.Tools" Version="2.65.0">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
